# pareto_distribution_bet_game

./: .gitignore  README.md  TODO.md  bet_game.ipynb  pyproject.toml
.github/: GITHUB.md
data/: DATA.md
data/players_status_checkpoints/: starting.csv
others/: bet_game.py  old_bet_game.py
players_status_checkpoints/: after_taxes.csv  ending.csv  middle.csv
