[project]
name = "pareto-distribution-bet-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]
